<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="About"
        android:textColor="#FFFF00"
        android:textSize="35dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_game"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chucnang"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about4"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about5"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/npt"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:textColor="#EEEE00"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">


        <Button
            android:id="@+id/back"


            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button1"

            android:gravity="center"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />


    </LinearLayout>
</LinearLayout>