<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstructionActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TextView
            android:text="Cách chơi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="35dp"
            android:layout_gravity="center"
            android:textColor="#FFFF00"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/txv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ins1"
            android:textSize="20dp"
            android:textColor="#ffd900"/>

        <TextView
            android:id="@+id/txv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ins2"
            android:textSize="20dp"
            android:textColor="#b7ff00"/>

        <TextView
            android:id="@+id/txv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kq1"
            android:textSize="20dp"
            android:textColor="#ffff00"/>

        <TextView
            android:id="@+id/txv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kq2"
            android:textSize="20dp"
            android:textColor="#ffc800"/>

        <TextView
            android:id="@+id/txv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kq3"
            android:textSize="20dp"
            android:textColor="#ffc800"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">



        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Play"


            />
    </LinearLayout>


</LinearLayout>
